z-index corrected
I corrected the z-index for the carousel indicators so that they are not
visible in front of the affix.

--- a/ferrerih_qfg_stylesheet.css
+++ b/ferrerih_qfg_stylesheet.css
@@ -90,11 +90,14 @@ body
   padding: 0em;
   }
 
+.carousel-indicators
+{
+	z-index: 9 !important;
+}
 .carousel-indicators li
 {
 	border-color: #b30000 !important;
 }
-
 .carousel-indicators .active
 {
 	background-color: #b30000 !important;
